<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UtahArts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="frag_home">Home Fragment</string>
    <string name="frag_schedule">Schedule Fragment</string>
    <string name="frag_artists">Artists Fragment</string>
    <string name="frag_favorites">Favorites Fragment</string>
    <string name="frag_art_fan_cam">Art Fan Cam Fragment</string>
    <string name="frag_vote_local">Vote Local Fragment</string>
    <string name="frag_info">Info Fragment</string>
    <string name="start_date">Thursday June 26th - Sunday June 29th</string>
    <string name="end_date">From 12pm - 11pm in Library Square</string>

    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="artists">Artists</string>
    <string name="art_fan_cam">Art Fan Cam</string>
    <string name="vote_local">Vote Local</string>
    <string name="favorites">Favorites</string>
    <string name="info">Info</string>

    <!-- Dialogs -->
    <string name="dialog_coming_soon_title">Coming Soon</string>
    <string name="dialog_coming_soon">Coming Soon</string>
    <string name="error">ERROR</string>
    <string name="close">CLOSE</string>
    <string name="notice">NOTICE</string>
    <string name="loading">Loading…</string>
    <string name="btn_one">BUTTON ONE</string>
    <string name="btn_two">BUTTON TWO</string>
    <string name="btn_three">BUTTON THREE</string>
    <string name="no_internet_dialog">NO INTERNET</string>


    <string name="action_bar_arrow">Back Arrow</string>
    <array name="nav_items">
        <item>Schedule</item>
        <item>Artists</item>
        <item>Art Fan Cam</item>
        <item>Vote Local!</item>
        <item>Favorites</item>
        <item>Info</item>
    </array>
    <array name="test_nav_items">
        <item>Event Objects</item>
        <item>JSON Objects</item>
        <item>Single JSON</item>
    </array>


    <!-- Strings for test code of Json objects -->
    <string name="xml_parsed_as_event_objects">XML Parsed as Event Objects</string>
    <string name="xml_parsed_as_json_objects">XML Parsed as JSON Objects</string>
    <string name="xml_parsed_as_single_json_object">XML Parsed as Single JSON Object</string>

</resources>
